--- a/app/src/main/res/layout/activity_description_product.xml
+++ b/app/src/main/res/layout/activity_description_product.xml
@@ -1,39 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     tools:context=".DescriptionProduct">
+
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/scrollView">
+        android:layout_height="match_parent">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="vertical">
 
             <TextView
-                android:layout_weight="1"
                 android:id="@+id/tituloxml"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
-                app:layout_constraintBottom_toTopOf="@id/fotoAmpliada"
                 android:layout_marginBottom="20dp"
-                android:textStyle="bold"
-                android:textSize="35sp"
                 android:textColor="#075e54"
+                android:textSize="35sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@id/fotoAmpliada"
                 app:layout_constraintEnd_toEndOf="parent"
-                tools:text="Aqui va el titulo"
                 app:layout_constraintStart_toStartOf="parent"
-                />
+                tools:text="Aqui va el titulo" />
+
             <ImageView
-                android:layout_weight="1"
                 android:id="@+id/fotoAmpliada"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
@@ -48,15 +48,14 @@
                 tools:background="@color/black" />
 
             <TextView
-                android:layout_weight="1"
                 android:id="@+id/descriptionAmpliada"
                 android:layout_width="match_parent"
-                android:textSize="18sp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
                 android:layout_marginStart="50dp"
+                android:layout_marginTop="25dp"
                 android:layout_marginEnd="50dp"
                 android:textColor="@color/black"
+                android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -73,33 +72,39 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_marginStart="35dp"
+                    android:layout_marginTop="50dp"
                     android:layout_marginBottom="36dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/logo" />
 
                 <TextView
                     android:id="@+id/textView3"
                     android:layout_width="230dp"
                     android:layout_height="50dp"
+                    android:layout_marginTop="50dp"
                     android:layout_marginBottom="36dp"
                     android:gravity="center"
                     android:text="App Legend    Líneas de atención 01-8000-12444 o al 313 333 3333 "
                     android:textColor="@color/black"
                     android:textSize="13sp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/imageView2" />
+                    app:layout_constraintStart_toEndOf="@+id/imageView2"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="64dp"
                     android:layout_marginBottom="55dp"
                     android:text="2022"
                     android:textColor="@color/black"
                     android:textSize="13sp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/textView3" />
+                    app:layout_constraintStart_toEndOf="@+id/textView3"
+                    app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
