Se le agrega webView "conocenos" en el drawer layout manager

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,9 +13,13 @@
     </group>
     <item android:title="Otros">
         <menu>
+            <item android:id="@+id/nav_item_five"
+            android:icon="@drawable/rombo"
+            android:title="!Conocenos!" />
+
             <item android:id="@+id/nav_item_four"
                 android:icon="@drawable/rombo"
-                android:title="Cerrar sesión "/>
+                android:title="Cerrar sesión"/>
         </menu>
     </item>
 </menu>
